Creating custom component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -300,7 +300,7 @@
 </style>
 
 <div class="container">
-  <p>Your IP Adderss : {{ ipAddress }}</p>
+  <app-data></app-data>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
