Passed selected items from Parent

--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -1,5 +1,6 @@
 <app-prime-dropdown
   [cities]="cities"
+  [city]="city"
   (selectedCity)="showSelectedCity($event)"
 ></app-prime-dropdown>
 <h3>I am in Child Component</h3>
