Removed ngModel in reactive forms

--- a/src/app/data/data.component.html
+++ b/src/app/data/data.component.html
@@ -1,6 +1,6 @@
 <app-prime-dropdown
   [cities]="cities"
-  [city]="city"
+  [citiesSelection]="city"
   (selectedCity)="showSelectedCity($event)"
 ></app-prime-dropdown>
 <h3>I am in Child Component</h3>
